# qualisys_msg_transfer_demo

./: .gitignore  CMakeLists.txt  README.md  mat2rosbag.py  package.xml  qualisys_pose.hpp  qualisys_pose_listener.cpp
data/: trial_4_front.txt  trial_4_wifi.txt
data/2022-05-11_MAir/inekf/: 01_cam_husky_inekf_pose_tum.txt
data/2022-05-11_MAir/output_data/: 01_test_husky_inekf_pose.txt  trial1_rectangle_wifi.txt  trial2_batman_wifi.txt  trial6_rock_you_center.txt  trial6_rock_you_front.txt
