<?xml version="1.0"?>
<package format="2">
    <name>qualisys_pose</name>
    <version>0.0.0</version>
    <description>Qualisys pose listener and publish package</description>
    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="tingjunl@umich.edu">Tingjun</maintainer>

    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>MIT</license>

    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>tf</depend>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>qualisys_msgs</build_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
    <!-- Other tools can request additional information be placed here -->

    </export>
</package>